--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ futures= "0.3.21"
 [dependencies.sqlx]
 version = "0.6.0"
 optional = true
-
+features = ["runtime-tokio-rustls"]
 
 [dependencies.rocket]
 version = "0.5.0-rc.2"
@@ -93,7 +93,7 @@ version = "0.6.0"
 features = ["runtime-tokio-rustls"]
 
 [dev-dependencies.rocket_auth]
-path = "../rocket_auth"
+path = "../rocket_auth_fixed"
 features = [
     "sqlx-sqlite",
     "sqlx-postgres",
